# yaptlytoti

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.md~  main.cpp  mainwindow.h  mainwindowslots.cpp
client/: audiosystem.cpp  audiosystem.h  audioworker.cpp  audioworker.h  client.h  inputreceiver.cpp  inputreceiver.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainworker.cpp  mainworker.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
server/: main.cpp  server.h
voip/: CMakeLists.txt  codec.cpp  codec.h  network.cpp  network.h  voip.cpp  voip.h  voipmessage.cpp  voipmessage.h
web/: .gitignore  README.md  package.json  run.sh  server.js
web/public/css/: style.less
web/public/css/Themes/: default.css
web/public/js/: client.js
web/views/: 404.jade  index.jade
